UI - Final Fix
Hopefully this the final UI fix. All the buttons are back were they belong and formatted accordingly.
The file name also displays better now, made the label white.
Fixed view-albums so that it doesn't look too crowded.

That should be all on the UI part, will more onto the migration of the website and db next. Gonna take about 1-2 days 3 at most.

--- a/CorporatePhotoPresentation/src/main/resources/static/css/edit-photo-data.css
+++ b/CorporatePhotoPresentation/src/main/resources/static/css/edit-photo-data.css
@@ -176,6 +176,63 @@ img {
 .button:hover {
     background-color: #0D1B2A;
 }
+.buttonFlexFix{
+   text-align:center;
+   color: #fff;
+   background-color: #475A71;
+   cursor: pointer;
+   transition: .3s ease-in-out;
+}
+.buttonFlexFix:hover {
+    background-color: #0D1B2A;
+}
+.buttonContainerRow{
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    /*justify-content: space-between;*/
+    align-items: stretch;
+    font: #fff;
+}
+.buttonContainerCol{
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  /*justify-content: space-between;*/;
+  align-items: center;
+  font: #fff;
+}
+
+.btnBottom{
+   width: 15%;
+   height: 50px;
+   border: none;
+   border-radius: 10px;
+   outline: none;
+
+   margin: 5px;
+   padding: 10px;
+
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-self: center;
+
+   font-size: 16px;
+   font-color: #fff;
+   text-align: center;
+   color: #fff;
+   background-color: #475A71;
+   cursor: pointer;
+   transition: .3s ease-in-out;
+}
+.btnBottom:hover {
+     background-color: #0D1B2A;
+ }
 
 .lbl {
     font-size: 18px;
